k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snmp-system
  labels:
    name: snmp-system
    app: snmp-management
